# mdt

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  changelog.md  clippy.toml  codecov.yml  deny.toml  devenv.nix  devenv.yaml  dprint.json  knope.toml  mdt.toml  monochange.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain.toml  template.t.md  tsconfig.json  tsdown.config.json
.cargo/: config.toml
crates/mdt/: Cargo.toml  changelog.md  readme.md
crates/mdt/src/: __fixtures.rs  __tests.rs  config.rs  engine.rs  error.rs  lexer.rs  lib.rs  parser.rs  patterns.rs  position.rs  project.rs  source_scanner.rs  tokens.rs
crates/mdt/src/snapshots/: mdt____tests__snapshot_parse_full_document.snap  mdt____tests__snapshot_tokenize_closing.snap  mdt____tests__snapshot_tokenize_consumer.snap  mdt____tests__snapshot_tokenize_provider.snap
crates/mdt_cli/: Cargo.toml  changelog.md  readme.md
crates/mdt_cli/src/: lib.rs  main.rs
crates/mdt_cli/tests/: check.rs  init.rs  snapshots.rs  typescript_workspace.rs  update.rs
crates/mdt_cli/tests/snapshots/: snapshots__check_diff_text_verbose.snap  snapshots__check_format_github_stale.snap  snapshots__check_format_github_up_to_date.snap  snapshots__check_format_json_stale.snap  snapshots__check_format_json_up_to_date.snap  snapshots__check_format_text_stale.snap  snapshots__check_verbose_stale.snap  snapshots__check_verbose_up_to_date.snap  snapshots__check_with_diff.snap  snapshots__empty_project_check.snap  snapshots__empty_project_update.snap  snapshots__include_empty_check_after_update.snap  snapshots__include_empty_update.snap  snapshots__include_empty_update_lib_rs.snap  snapshots__include_empty_update_no_include_empty_rs.snap  snapshots__init_existing_template.snap  snapshots__init_fresh_directory.snap  snapshots__init_fresh_directory_template.snap  snapshots__list_blocks.snap  snapshots__list_blocks_verbose.snap  snapshots__list_empty_project.snap  snapshots__list_orphan_consumer.snap  snapshots__list_orphan_consumer_verbose.snap  snapshots__missing_provider_check.snap  snapshots__missing_provider_update.snap  snapshots__missing_provider_update_readme_md.snap  snapshots__multiple_providers_check_after_update.snap  snapshots__multiple_providers_dry_run.snap  snapshots__multiple_providers_list.snap  snapshots__multiple_providers_update.snap  snapshots__multiple_providers_update_docs_md.snap  snapshots__multiple_providers_update_readme_md.snap  snapshots__no_subcommand.snap  snapshots__orphan_consumer_check.snap  snapshots__orphan_consumer_update.snap  snapshots__orphan_consumer_update_readme_md.snap  snapshots__pad_blocks_multi_lang_check_after_update.snap  snapshots__pad_blocks_multi_lang_check_stale.snap  snapshots__pad_blocks_multi_lang_dry_run.snap  snapshots__pad_blocks_multi_lang_update.snap  (+34 more)
crates/mdt_lsp/: Cargo.toml  changelog.md  readme.md
crates/mdt_lsp/src/: __tests.rs  error.rs  lib.rs  main.rs
docs/: Cargo.toml  (+1 more)
mdt_cli/: Cargo.toml  changelog.md  readme.md
mdt_cli/src/: default_mdt_toml.rs  lib.rs  main.rs
mdt_cli/tests/: assist.rs  check.rs  common.rs  comparison.rs  config_resolution.rs  init.rs  snapshots.rs  typescript_workspace.rs  update.rs
mdt_cli/tests/fixtures/check_formats/: readme.md
mdt_cli/tests/fixtures/check_invalid_transformer/: template.t.md
mdt_cli/tests/fixtures/check_multiple_stale/: readme.md  template.t.md
mdt_cli/tests/fixtures/check_single_block/: readme.md  template.t.md
mdt_cli/tests/fixtures/check_stale/: readme.md
mdt_cli/tests/fixtures/check_stale_named/: readme.md  template.t.md
mdt_cli/tests/fixtures/check_undefined_vars/: package.json  readme.md  template.t.md
mdt_cli/tests/fixtures/check_up_to_date/: readme.md  template.t.md
mdt_cli/tests/fixtures/check_valid_vars/: mdt.toml  readme.md  template.t.md
mdt_cli/tests/fixtures/doctor_duplicate_provider/: one.t.md  readme.md  two.t.md
mdt_cli/tests/snapshots/: assist__assist_json_prints_machine_readable_profile.snap  assist__assist_text_prints_mcp_snippet_and_guidance.snap  check__check_fails_when_stale.snap  check__check_multiple_stale_blocks.snap  check__check_no_warnings_for_valid_template_variables.snap  check__check_passes_when_up_to_date.snap  check__check_stale_shows_block_name_and_file.snap  check__check_verbose_shows_provider_count.snap  check__check_warns_missing_provider.snap  check__check_warns_undefined_template_variables.snap  check__check_with_no_blocks.snap  check__doctor_json_includes_cache_checks.snap  check__info_json_includes_cache_observability_fields.snap  comparison__lenient_added_line_is_stale.snap  comparison__lenient_code_block_change_is_stale.snap  comparison__lenient_completely_different_is_stale.snap  comparison__lenient_inline_change_is_stale.snap  comparison__lenient_mixed_stale_clean_detects_only_content_change.snap  comparison__lenient_removed_line_is_stale.snap  comparison__lenient_update_writes_exact_source_bytes__readme_md.snap  comparison__lenient_word_change_is_stale.snap  comparison__strict_content_change_is_stale.snap  comparison__strict_extra_blank_lines_is_stale.snap  comparison__strict_multiple_blocks_all_detected.snap  comparison__strict_single_extra_newline_is_stale.snap  comparison__strict_trailing_whitespace_is_stale.snap  config_resolution__info_prefers_mdt_toml_over_other_candidates.snap  config_resolution__info_resolves_dot_config_mdt_toml.snap  config_resolution__info_resolves_dot_mdt_toml.snap  init__init_creates_config_when_template_exists.snap  init__init_creates_config_when_template_exists__mdt_toml.snap  init__init_creates_config_when_template_exists__template_t_md.snap  init__init_does_not_overwrite.snap  init__init_does_not_overwrite__mdt_toml.snap  init__init_does_not_overwrite__template_t_md.snap  snapshots__check_diff_text_verbose.snap  snapshots__check_format_github_stale.snap  snapshots__check_format_github_up_to_date.snap  snapshots__check_format_json_stale.snap  snapshots__check_format_json_up_to_date.snap  (+114 more)
mdt_mcp/: Cargo.toml  changelog.md  readme.md
mdt_mcp/src/: __tests.rs  lib.rs
(+320 files in other folders)
