[workspace]
members = ["crates/*", "docs"]
default-members = ["crates/*", "docs"]
resolver = "2"

[workspace.dependencies]
assert_cmd = "2"
clap = "4"
derive_more = { version = "2", features = ["deref", "deref_mut"] }
doc-comment = "0.3"
float-cmp = "0.9"
globset = "0.4"
insta = "1"
logos = "0.15"
markdown = "1"
miette = "7"
minijinja = "2"
predicates = "3"
readonly = "0.2"
rstest = "0.25"
serde = "1"
serde_json = "1"
similar-asserts = "1"
snailquote = "0.3"
tempfile = "3"
thiserror = "2"
tokio = "1"
tower-lsp = "0.20"
typed-builder = "0.21"
vfs = "0.12"

# Internal crates
mdt = { path = "./crates/mdt", version = "0.0.0" }
mdt_cli = { path = "./crates/mdt_cli", version = "0.0.0" }
mdt_lsp = { path = "./crates/mdt_lsp", version = "0.0.0" }

[workspace.package]
version = "0.0.0"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/ifiokjr/mdt"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/mdt"
rust-version = "1.86.0"

[workspace.metadata.bin]
cargo-insta = { version = "1.44.3" }
cargo-llvm-cov = { version = "0.6.21" }
cargo-nextest = { version = "0.9.114" }
cargo-semver-checks = { version = "0.45.0" }
cargo-workspaces = { version = "0.4.2" }
knope = { version = "0.21.7", bins = ["knope"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
