[workspace]
members = ["docs", "mdt_cli", "mdt_core", "mdt_lsp"]
resolver = "2"

[workspace.package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = ["development-tools"]
edition = "2024"
homepage = "https://github.com/ifiokjr/mdt"
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
license = "Unlicense"
readme = "readme.md"
repository = "https://github.com/ifiokjr/mdt"
rust-version = "1.86.0"

[workspace.dependencies]
assert_cmd = { default-features = false, version = "^2" }
clap = { default-features = false, version = "^4" }
derive_more = { version = "2", features = ["deref", "deref_mut"], default-features = false }
doc-comment = { default-features = false, version = "^0.3" }
float-cmp = { default-features = false, version = "^0.10" }
globset = { default-features = false, version = "^0.4" }
ignore = { default-features = false, version = "^0.4" }
insta = { default-features = false, version = "^1" }
insta-cmd = { default-features = false, version = "^0.6" }
kdl = { default-features = false, version = "^6" }
logos = { default-features = false, version = "^0.14" }
markdown = { default-features = false, version = "^1" }
miette = { default-features = false, version = "^7" }
minijinja = { default-features = false, version = "^2" }
notify = { default-features = false, version = "^8" }
owo-colors = { default-features = false, version = "^4" }
predicates = { default-features = false, version = "^3" }
rmcp = { default-features = false, version = "^0.16" }
rstest = { default-features = false, version = "^0.26" }
schemars = { default-features = false, version = "^0.8" }
serde = { default-features = false, version = "^1" }
serde_json = { default-features = false, version = "^1" }
serde_yaml_ng = { default-features = false, version = "^0.10" }
similar = { default-features = false, version = "^2" }
similar-asserts = { default-features = false, version = "^1" }
snailquote = { default-features = false, version = "^0.3" }
tempfile = { default-features = false, version = "^3" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
toml = { default-features = false, version = "^1" }
tower-lsp-server = { default-features = false, version = "^0.23" }

# Internal crates
mdt_core = { path = "./mdt_core", version = "0.5.0" }
mdt_lsp = { path = "./mdt_lsp", version = "0.4.1" }
mdt_mcp = { path = "./mdt_mcp", version = "0.4.1" }

[workspace.metadata.bin]
cargo-insta = { version = "1.46.3" }
cargo-llvm-cov = { version = "0.8.4" }
cargo-nextest = { version = "0.9.129" }
cargo-semver-checks = { version = "0.46.0" }
cargo-deny = { version = "0.19.0" }
cargo-workspaces = { version = "0.4.2" }
knope = { version = "0.22.3", bins = ["knope"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
