[package]
name = "mdt_mcp"
version = "0.3.0"
categories = { workspace = true }
documentation = "https://docs.rs/mdt_mcp"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates", "mcp"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "MCP server for mdt (manage markdown templates)"

[dependencies]
mdt_core = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"], default-features = true }

[dev-dependencies]
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
