[package]
name = "mdt_mcp"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/mdt_mcp"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates", "mcp"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "MCP server for mdt — AI assistant integration for markdown template synchronization"

[dependencies]
mdt_core = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io", "macros"] }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], default-features = true }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true }

[dev-dependencies]
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
