[package]
name = "mdt"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/mdt"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "update markdown content anywhere using comments as template tags"

[dependencies]
derive_more = { workspace = true, default-features = true }
float-cmp = { workspace = true, default-features = true }
globset = { workspace = true, default-features = true }
kdl = { workspace = true, default-features = true }
markdown = { workspace = true, default-features = true }
miette = { workspace = true, features = ["fancy"], default-features = true }
minijinja = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
serde_yml = { workspace = true, default-features = true }
similar = { workspace = true, default-features = true }
snailquote = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
toml = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"], default-features = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
