[package]
name = "mdt_lsp"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/mdt_lsp"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates", "lsp"]
license = { workspace = true }
publish = false
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "LSP server for mdt (manage markdown templates)"

[dependencies]
mdt = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-lsp = { workspace = true, features = ["proposed"] }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
