[package]
name = "mdt_lsp"
version = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/mdt_lsp"
edition = { workspace = true }
include = { workspace = true }
keywords = ["markdown", "templates", "lsp"]
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "LSP server for mdt (manage markdown templates)"

[dependencies]
mdt = { workspace = true }
serde_json = { workspace = true, default-features = true }
tokio = { workspace = true, features = ["full"], default-features = true }
tower-lsp = { workspace = true, features = ["proposed"], default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }
rstest = { workspace = true, default-features = true }
similar-asserts = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
